QR code logic left

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -27,6 +27,8 @@
             
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+
+        <p class="mt-2">Login here <a href="/login">link</a></p>
     </div>
 
 
