--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,24 +7,41 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <ul>
-        <li><a href="/user/new">Add User</a></li>
-    </ul>
+    <div class="container">
+        <li><a href="/logout">logout</a></li>
+        <% if (user?.role === 'admin') { %>
+            <li><a href="/user/new">Add user</a></li>
+        <% } %>
+    
+        <% if (user?.role === 'admin') { %>
+            <div class="container border border-3 p-3">
+                <% if (users?.length === 0) { %>
+                    <p>No data in Database, Please add or insert data</p>
+                <% } %>
+                <% for(let user of users ) { %>
+                    <ul class="border border-3">
+                        <li>First Name: <%= user.firstName %></li>
+                        <li>Last Name: <%= user.lastName %></li>
+                        <li>Email: <%= user.email %></li>
+                        <li>Course: <%= user.course %></li>
+                        <li>Address: <%= user.address %></li>
+                        <li>Phone: <%= user.phone %></li>
+                    </ul>
+                <% } %>
+            </div>
+        <% } else if (user?.role === 'user') { %>
+            <p class="display-6 mt-3">Your Details:</p>
+            <ul class="border border-3">
+                <li>First Name: <%= user.firstName %></li>
+                <li>Last Name: <%= user.lastName %></li>
+                <li>Email: <%= user.email %></li>
+                <li>Course: <%= user.course %></li>
+                <li>Address: <%= user.address %></li>
+                <li>Phone: <%= user.phone %></li>
+            </ul>
 
-    <% if (users) { %>
-        <div class="container border border-3 p-3">
-            <% for(let user of users ) { %>
-                <ul class="border border-3">
-                    <li>First Name: <%= user.firstName %></li>
-                    <li>Last Name: <%= user.lastName %></li>
-                    <li>Email: <%= user.email %></li>
-                    <li>Course: <%= user.course %></li>
-                    <li>Address: <%= user.address %></li>
-                    <li>Phone: <%= user.phone %></li>
-                </ul>
-            <% } %>
-        </div>
-    <% } %>
+        <% } %>
+    </div>
 
   <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
