--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SIGN UP PAGE</title>
+  <title>Log In</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
 <body>
@@ -13,7 +13,7 @@
     <form action="/login" method="post" class="col-12 col-md-6 mx-auto mt-4">
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
-        <input name="email" type="email" class="form-control" id="email">
+        <input name="username" type="email" class="form-control" id="email">
       </div>
       <div class="mb-3">
         <label for="password" class="form-label">Password</label>
@@ -22,6 +22,8 @@
 
       <button type="submit" class="btn btn-primary">Login</button>
     </form>
+
+    <p class="mt-2">Register here as admin? <a href="/signup">link</a></p>
   </div>
 
 
