--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,8 +9,8 @@
 
 <body>
 
-  <div class="container">
-    <form action="/login" method="post" class="col-12 col-md-6 mx-auto mt-4">
+  <div class="container col-12 col-md-6 mx-auto mt-4">
+    <form action="/login" method="post">
       <div class="mb-3">
         <label for="email" class="form-label">Email address</label>
         <input name="username" type="email" class="form-control" id="email">
