--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container">
+    <div class="col-12 col-md-6 mx-auto px-4">
         <li><a href="/logout">logout</a></li>
         <% if (user?.role === 'admin') { %>
             <li><a href="/user/new">Add user</a></li>
         <% } %>
     
         <% if (user?.role === 'admin') { %>
-            <div class="container border border-3 p-3">
+            <!-- <div class="col-12 col-md-6 border border-3 p-3"> -->
                 <% if (users?.length === 0) { %>
                     <p>No data in Database, Please add or insert data</p>
                 <% } %>
                 <% for(let user of users ) { %>
-                    <ul class="border border-3">
+                    <ul class="my-3 border border-3">
                         <li>First Name: <%= user.firstName %></li>
                         <li>Last Name: <%= user.lastName %></li>
                         <li>Email: <%= user.email %></li>
@@ -28,7 +28,7 @@
                         <li>Phone: <%= user.phone %></li>
                     </ul>
                 <% } %>
-            </div>
+            <!-- </div> -->
         <% } else if (user?.role === 'user') { %>
             <p class="display-6 mt-3">Your Details:</p>
             <ul class="border border-3">
@@ -40,6 +40,7 @@
                 <li>Phone: <%= user.phone %></li>
             </ul>
 
+            <img src="<%= url %>" alt="">
         <% } %>
     </div>
 
