--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,8 +10,8 @@
 
 <body>
 
-    <div class="container">
-        <form action="/admin" method="post" class="col-12 col-md-6 mx-auto mt-4">
+    <div class="container col-12 col-md-6 mx-auto mt-4">
+        <form action="/admin" method="post">
             <div class="mb-3">
               <label for="email" class="form-label">Email address</label>
               <input name="email" type="email" class="form-control" id="email">
